# penguins-dsai-miniproject

./: README.md  penguins.ipynb  pyproject.toml
