[project]
name = "penguins-dsai-miniproject"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Fabian Sefranek", email = "fabiansefranek@gmail.com" }
]
dependencies = [
    "seaborn>=0.13.2",
    "ipykernel>=6.29.5",
    "notebook>=7.2.2",
    "scikit-learn>=1.5.2",
    "numpy>=2.1.3",
    "statsmodels>=0.14.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/penguins_dsai_miniproject"]
